--- a/index.html
+++ b/index.html
@@ -3,127 +3,128 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Haven</title>
+    <title>Jordy Life OS</title>
     <style>
-        /* BASIC RESET & FONTS */
+        /* 1. CORE STYLES */
         * { box-sizing: border-box; margin: 0; padding: 0; }
         body {
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
             background-color: #FDFBF7; /* Warm Cream */
             color: #1D1D1F;
-            line-height: 1.5;
-            padding: 20px;
+            padding-bottom: 80px; /* Space for bottom nav on mobile */
         }
 
-        /* COLORS */
-        :root {
-            --bg: #FDFBF7;
-            --surface: #FFFFFF;
-            --primary: #1D1D1F;
-            --secondary: #86868B;
-            --clay: #E07A5F;
-            --sage: #81B29A;
-            --border: #E5E5EA;
-        }
-
-        /* LAYOUT */
-        .container {
-            max-width: 1000px;
-            margin: 0 auto;
-        }
-
-        .header {
-            margin-bottom: 40px;
+        /* 2. NAVIGATION (Bottom Bar) */
+        .navbar {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            background: rgba(255, 255, 255, 0.9);
+            backdrop-filter: blur(10px);
+            border-top: 1px solid #E5E5EA;
             display: flex;
-            justify-content: space-between;
-            align-items: center;
+            justify-content: space-around;
+            padding: 15px 0;
+            z-index: 100;
+        }
+        .nav-item {
+            font-size: 24px;
+            opacity: 0.4;
+            cursor: pointer;
+            transition: 0.2s;
+        }
+        .nav-item.active {
+            opacity: 1;
+            transform: translateY(-2px);
         }
 
-        h1 { font-size: 24px; font-weight: 600; }
-        h2 { font-size: 14px; color: var(--secondary); text-transform: uppercase; letter-spacing: 1px; margin-bottom: 5px; }
-
-        /* CARDS */
+        /* 3. LAYOUT & CARDS */
+        .container { max-width: 800px; margin: 0 auto; padding: 20px; }
+        .header { margin-bottom: 20px; }
+        .page-title { font-size: 28px; font-weight: 700; letter-spacing: -0.5px; }
+        
         .card {
-            background: var(--surface);
-            border: 1px solid var(--border);
+            background: #FFFFFF;
+            border: 1px solid #E5E5EA;
             border-radius: 16px;
-            padding: 24px;
-            margin-bottom: 20px;
-            box-shadow: 0 4px 20px rgba(0,0,0,0.03);
+            padding: 20px;
+            margin-bottom: 16px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.02);
+            transition: transform 0.2s;
         }
+        .card:active { transform: scale(0.98); }
 
-        /* GRID */
-        .grid {
-            display: grid;
-            grid-template-columns: 1fr;
-            gap: 20px;
-        }
-
-        /* SPECIFIC COMPONENTS */
-        .badge {
-            background: #FFF0ED;
-            color: var(--clay);
-            padding: 4px 12px;
-            border-radius: 20px;
-            font-size: 12px;
-            font-weight: 600;
-            display: inline-block;
-            margin-bottom: 12px;
-        }
-
+        /* 4. COMPONENT STYLES */
         .btn {
-            background: var(--primary);
+            background: #1D1D1F;
             color: white;
             border: none;
-            padding: 10px 20px;
+            padding: 12px 24px;
             border-radius: 50px;
             font-size: 14px;
-            font-weight: 500;
+            font-weight: 600;
+            width: 100%;
+            margin-top: 10px;
+        }
+
+        input[type="text"] {
+            width: 100%;
+            padding: 15px;
+            border: 1px solid #E5E5EA;
+            border-radius: 12px;
+            font-size: 16px;
+            background: #F9F9F9;
+            margin-bottom: 10px;
+            outline: none;
+        }
+        input[type="text"]:focus { border-color: #1D1D1F; background: white; }
+
+        .habit-row {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 12px 0;
+            border-bottom: 1px solid #F4F4F4;
+        }
+        .habit-row:last-child { border-bottom: none; }
+
+        .checkbox {
+            width: 24px;
+            height: 24px;
+            border: 2px solid #D1D1D6;
+            border-radius: 6px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            font-weight: bold;
             cursor: pointer;
         }
+        .checkbox.checked { background: #81B29A; border-color: #81B29A; }
 
-        .progress-circle {
-            width: 80px;
-            height: 80px;
-            border-radius: 50%;
-            background: conic-gradient(var(--sage) 75%, #F4F2EE 0);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin-bottom: 10px;
-        }
-        .progress-inner {
-            width: 60px;
-            height: 60px;
-            background: var(--surface);
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 14px;
-            font-weight: 600;
-        }
-
-        /* DESKTOP TWEAKS */
-        @media (min-width: 768px) {
-            .grid { grid-template-columns: 2fr 1fr; }
-        }
+        .journal-entry { margin-bottom: 20px; }
+        .date-badge { font-size: 12px; color: #86868B; text-transform: uppercase; letter-spacing: 1px; }
     </style>
 </head>
 <body>
 
-    <div class="container">
-        <header class="header">
-            <div>
-                <h2>Good Morning</h2>
-                <h1>Haven Dashboard</h1>
-            </div>
-            <button class="btn">Focus Mode</button>
-        </header>
+    <!-- HEADER -->
+    <div class="container header">
+        <div class="page-title" id="page-title">Dashboard</div>
+    </div>
 
-        <div id="app">
-            <!-- JavaScript will put content here -->
-        </div>
+    <!-- MAIN CONTENT AREA -->
+    <div class="container" id="app">
+        <!-- Content injected by JS -->
+    </div>
+
+    <!-- NAVIGATION -->
+    <div class="navbar">
+        <div class="nav-item active" onclick="router('home')">🏠</div>
+        <div class="nav-item" onclick="router('habits')">✅</div>
+        <div class="nav-item" onclick="router('journal')">📓</div>
+        <div class="nav-item" onclick="router('settings')">⚙️</div>
     </div>
 
     <script src="app.js"></script>
