--- a/index.html
+++ b/index.html
@@ -1,132 +1,55 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jordy Life OS</title>
-    <style>
-        /* 1. CORE STYLES */
-        * { box-sizing: border-box; margin: 0; padding: 0; }
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-            background-color: #FDFBF7; /* Warm Cream */
-            color: #1D1D1F;
-            padding-bottom: 80px; /* Space for bottom nav on mobile */
-        }
-
-        /* 2. NAVIGATION (Bottom Bar) */
-        .navbar {
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            background: rgba(255, 255, 255, 0.9);
-            backdrop-filter: blur(10px);
-            border-top: 1px solid #E5E5EA;
-            display: flex;
-            justify-content: space-around;
-            padding: 15px 0;
-            z-index: 100;
-        }
-        .nav-item {
-            font-size: 24px;
-            opacity: 0.4;
-            cursor: pointer;
-            transition: 0.2s;
-        }
-        .nav-item.active {
-            opacity: 1;
-            transform: translateY(-2px);
-        }
-
-        /* 3. LAYOUT & CARDS */
-        .container { max-width: 800px; margin: 0 auto; padding: 20px; }
-        .header { margin-bottom: 20px; }
-        .page-title { font-size: 28px; font-weight: 700; letter-spacing: -0.5px; }
-        
-        .card {
-            background: #FFFFFF;
-            border: 1px solid #E5E5EA;
-            border-radius: 16px;
-            padding: 20px;
-            margin-bottom: 16px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.02);
-            transition: transform 0.2s;
-        }
-        .card:active { transform: scale(0.98); }
-
-        /* 4. COMPONENT STYLES */
-        .btn {
-            background: #1D1D1F;
-            color: white;
-            border: none;
-            padding: 12px 24px;
-            border-radius: 50px;
-            font-size: 14px;
-            font-weight: 600;
-            width: 100%;
-            margin-top: 10px;
-        }
-
-        input[type="text"] {
-            width: 100%;
-            padding: 15px;
-            border: 1px solid #E5E5EA;
-            border-radius: 12px;
-            font-size: 16px;
-            background: #F9F9F9;
-            margin-bottom: 10px;
-            outline: none;
-        }
-        input[type="text"]:focus { border-color: #1D1D1F; background: white; }
-
-        .habit-row {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 12px 0;
-            border-bottom: 1px solid #F4F4F4;
-        }
-        .habit-row:last-child { border-bottom: none; }
-
-        .checkbox {
-            width: 24px;
-            height: 24px;
-            border: 2px solid #D1D1D6;
-            border-radius: 6px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-            font-weight: bold;
-            cursor: pointer;
-        }
-        .checkbox.checked { background: #81B29A; border-color: #81B29A; }
-
-        .journal-entry { margin-bottom: 20px; }
-        .date-badge { font-size: 12px; color: #86868B; text-transform: uppercase; letter-spacing: 1px; }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-    <!-- HEADER -->
-    <div class="container header">
-        <div class="page-title" id="page-title">Dashboard</div>
-    </div>
+```
+<!-- HEADER -->
+<div class="container header">
+    <div class="page-title" id="page-title">Dashboard</div>
+    <div class="header-actions" id="header-actions"></div>
+</div>
 
-    <!-- MAIN CONTENT AREA -->
-    <div class="container" id="app">
-        <!-- Content injected by JS -->
-    </div>
+<!-- MAIN CONTENT AREA -->
+<div class="container" id="app">
+    <!-- Content injected by JS -->
+</div>
 
-    <!-- NAVIGATION -->
-    <div class="navbar">
-        <div class="nav-item active" onclick="router('home')">🏠</div>
-        <div class="nav-item" onclick="router('habits')">✅</div>
-        <div class="nav-item" onclick="router('journal')">📓</div>
-        <div class="nav-item" onclick="router('settings')">⚙️</div>
+<!-- NAVIGATION -->
+<div class="navbar">
+    <div class="nav-item active" onclick="router('home')" title="Dashboard">
+        <span class="nav-icon">🏠</span>
+        <span class="nav-label">Home</span>
     </div>
+    <div class="nav-item" onclick="router('habits')" title="Habits & Tasks">
+        <span class="nav-icon">✅</span>
+        <span class="nav-label">Habits</span>
+    </div>
+    <div class="nav-item" onclick="router('journal')" title="Journal">
+        <span class="nav-icon">📓</span>
+        <span class="nav-label">Journal</span>
+    </div>
+    <div class="nav-item" onclick="router('goals')" title="Goals">
+        <span class="nav-icon">🎯</span>
+        <span class="nav-label">Goals</span>
+    </div>
+    <div class="nav-item" onclick="router('settings')" title="Settings">
+        <span class="nav-icon">⚙️</span>
+        <span class="nav-label">Settings</span>
+    </div>
+</div>
 
-    <script src="app.js"></script>
+<!-- Modal Container -->
+<div id="modal-container"></div>
+
+<script src="app.js"></script>
+```
+
 </body>
 </html>
