--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jordy Life OS</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;600;700&family=Syne:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -24,29 +27,60 @@
 <!-- NAVIGATION -->
 <div class="navbar">
     <div class="nav-item active" onclick="router('home')" title="Dashboard">
-        <span class="nav-icon">🏠</span>
+        <div class="nav-icon">
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
+                <polyline points="9 22 9 12 15 12 15 22"></polyline>
+            </svg>
+        </div>
         <span class="nav-label">Home</span>
     </div>
     <div class="nav-item" onclick="router('habits')" title="Habits & Tasks">
-        <span class="nav-icon">✅</span>
-        <span class="nav-label">Habits</span>
+        <div class="nav-icon">
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <polyline points="9 11 12 14 22 4"></polyline>
+                <path d="M21 12v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11"></path>
+            </svg>
+        </div>
+        <span class="nav-label">Tasks</span>
     </div>
     <div class="nav-item" onclick="router('journal')" title="Journal">
-        <span class="nav-icon">📓</span>
+        <div class="nav-icon">
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
+                <polyline points="14 2 14 8 20 8"></polyline>
+                <line x1="16" y1="13" x2="8" y2="13"></line>
+                <line x1="16" y1="17" x2="8" y2="17"></line>
+            </svg>
+        </div>
         <span class="nav-label">Journal</span>
     </div>
     <div class="nav-item" onclick="router('goals')" title="Goals">
-        <span class="nav-icon">🎯</span>
+        <div class="nav-icon">
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <circle cx="12" cy="12" r="10"></circle>
+                <circle cx="12" cy="12" r="6"></circle>
+                <circle cx="12" cy="12" r="2"></circle>
+            </svg>
+        </div>
         <span class="nav-label">Goals</span>
     </div>
     <div class="nav-item" onclick="router('settings')" title="Settings">
-        <span class="nav-icon">⚙️</span>
+        <div class="nav-icon">
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <circle cx="12" cy="12" r="3"></circle>
+                <path d="M12 1v6m0 6v6m-9-9h6m6 0h6m-2.636-6.364l-4.243 4.243m0 6.122l4.243 4.243M6.637 6.637l4.243 4.243m0 6.122l-4.243 4.243"></path>
+            </svg>
+        </div>
         <span class="nav-label">Settings</span>
     </div>
 </div>
 
 <!-- Modal Container -->
 <div id="modal-container"></div>
+
+<!-- Background Effects -->
+<div class="grain-overlay"></div>
 
 <script src="app.js"></script>
 ```
