--- a/index.html
+++ b/index.html
@@ -9,45 +9,55 @@
 
 <body>
 
-<div class="topbar">
+<header>
   <button onclick="prevMonth()">◀</button>
   <h2 id="monthLabel"></h2>
   <button onclick="nextMonth()">▶</button>
   <button onclick="toggleDark()">🌙</button>
-</div>
+</header>
 
-<div class="dashboard">
-  <div class="card">
+<section class="dashboard">
+
+  <div class="card income">
     <h3>Income</h3>
     <p id="income">£0</p>
   </div>
 
-  <div class="card">
+  <div class="card bills">
     <h3>Bills</h3>
     <p id="bills">£0</p>
   </div>
 
-  <div class="card highlight">
+  <div class="card left">
     <h3>Money Left</h3>
     <p id="left">£0</p>
+    <div class="bar"><div id="leftBar"></div></div>
   </div>
-</div>
 
-<div class="section">
-  <input id="incomeInput" placeholder="Income">
+  <div class="card savings">
+    <h3>Savings Goal</h3>
+    <p id="savingsText">£0 / £0</p>
+    <div class="bar"><div id="savingsBar"></div></div>
+  </div>
+
+</section>
+
+<section class="inputs">
+  <input id="incomeInput" placeholder="Enter income">
   <button onclick="saveIncome()">Save Income</button>
-</div>
 
-<div class="section">
   <input id="billName" placeholder="Bill name">
   <input id="billAmount" placeholder="Amount">
-  <label>
-    <input type="checkbox" id="recurring"> Recurring
-  </label>
+  <label><input type="checkbox" id="recurring"> Recurring</label>
   <button onclick="addBill()">Add Bill</button>
-</div>
+
+  <input id="goalInput" placeholder="Savings goal">
+  <button onclick="setGoal()">Set Goal</button>
+</section>
 
 <ul id="billList"></ul>
+
+<div id="aiAdvice" class="advice"></div>
 
 <script src="app.js"></script>
 </body>
