--- a/index.html
+++ b/index.html
@@ -1,58 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Budget</title>
+<title>Budget Dashboard</title>
 <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
 <header>
-  <button onclick="prevMonth()">◀</button>
   <h2 id="monthLabel"></h2>
-  <button onclick="nextMonth()">▶</button>
-  <button onclick="toggleDark()">🌙</button>
+  <div>
+    <button onclick="prevMonth()">◀</button>
+    <button onclick="nextMonth()">▶</button>
+    <a href="year.html">Year</a>
+    <button onclick="toggleDark()">🌙</button>
+  </div>
 </header>
 
-<section class="dashboard">
+<section class="cards">
 
-  <div class="card income">
-    <h3>Income</h3>
-    <p id="income">£0</p>
-  </div>
+<div class="card">
+<h3>Income</h3>
+<p id="income">£0</p>
+</div>
 
-  <div class="card bills">
-    <h3>Bills</h3>
-    <p id="bills">£0</p>
-  </div>
+<div class="card">
+<h3>Bills</h3>
+<p id="bills">£0</p>
+</div>
 
-  <div class="card left">
-    <h3>Money Left</h3>
-    <p id="left">£0</p>
-    <div class="bar"><div id="leftBar"></div></div>
-  </div>
-
-  <div class="card savings">
-    <h3>Savings Goal</h3>
-    <p id="savingsText">£0 / £0</p>
-    <div class="bar"><div id="savingsBar"></div></div>
-  </div>
+<div class="card highlight">
+<h3>Money Left</h3>
+<p id="left">£0</p>
+<div class="bar"><div id="leftBar"></div></div>
+</div>
 
 </section>
 
-<section class="inputs">
-  <input id="incomeInput" placeholder="Enter income">
-  <button onclick="saveIncome()">Save Income</button>
+<section class="inputArea">
 
-  <input id="billName" placeholder="Bill name">
-  <input id="billAmount" placeholder="Amount">
-  <label><input type="checkbox" id="recurring"> Recurring</label>
-  <button onclick="addBill()">Add Bill</button>
+<input id="incomeInput" placeholder="Income">
+<button onclick="saveIncome()">Save Income</button>
 
-  <input id="goalInput" placeholder="Savings goal">
-  <button onclick="setGoal()">Set Goal</button>
+<input id="billName" placeholder="Bill name">
+<input id="billAmount" placeholder="Amount">
+<label><input type="checkbox" id="recurring"> Recurring</label>
+<button onclick="addBill()">Add Bill</button>
+
+<input id="goalInput" placeholder="Savings goal">
+<button onclick="setGoal()">Set Goal</button>
+
 </section>
 
 <ul id="billList"></ul>
