--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
 
 <header>
 <h2 id="monthLabel"></h2>
-<div>
+<div class="nav">
 <button onclick="prevMonth()">◀</button>
 <button onclick="nextMonth()">▶</button>
-<a href="year.html">Year</a>
-<button onclick="toggleDark()">◐</button>
+<a href="year.html">YEAR</a>
 </div>
 </header>
 
