--- a/year.html
+++ b/year.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
-<html>
+
+<html lang="en">
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Year Overview</title>
-<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ANNUAL REPORT // NEXUS-7</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-<header>
-<h2>Year Overview</h2>
-<a href="index.html">← Back</a>
-</header>
+  <header>
+    <h2>ANNUAL REPORT</h2>
+    <nav class="nav">
+      <a href="index.html">◀ BACK TO MAIN</a>
+    </nav>
+  </header>
 
-<div id="yearStats"></div>
+  <div id="yearStats"></div>
 
-<script src="app.js"></script>
-<script>
-setTimeout(renderYear,50);
-</script>
+  <script src="app.js"></script>
 
 </body>
 </html>
