--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <header>
-    <h2 id="monthLabel">LOADING...</h2>
+    <h2>BUDGET.SYS // NEXUS-7</h2>
     <nav class="nav">
       <button onclick="prevMonth()">◀ PREV</button>
       <button onclick="nextMonth()">NEXT ▶</button>
